[package]
name = "tiberius"
version = "0.1.0"
authors = ["Cult Pony"]
edition = "2018"
license = "AGPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
flexi_logger = "0.17"
tokio = { version = "1.3", features = ["full"] }
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
r2d2 = "0.8.9"
better-panic = "0.2"
envy = "0.4"
kankyo = "0.3"
tide = "0.16"
anyhow = "1.0"
securefmt = "0.1.1"
lazy_static = "1.4"
base64 = "0.12"
openssl = "0.10"
erlang-term = "0.1.1"
philomena-models = { path = "../philomena-models" }
sqlx = { version = "0.5.2", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "offline", "migrate"] }
url = { version = "2.2", features = ["serde"] }
url_serde = "0.2"
maud = "0.22.2"
regex = "1.5.3"
sqlxmq = { version = "0.1.2", default-features = false, features = ["runtime-tokio-rustls"] }
tokio-cron-scheduler = "0.2.1"
chrono = "0.4.19"
camo-url = "0.1.2"
hex = "0.4.3"
csp = "0.1.0"
either = { version = "1.6.1", features = ["serde"] }
uri-builder = "0.1.0"
rust-embed = { version = "5.8.0", features = ["compression"] }
new_mime_guess = "2.1.0"
async-trait = "0.1.50"

[features]
default = []
channel-images = []