[workspace]
members = [
    "tiberius-captcha",
    "tiberius-common-html",
    "tiberius-core",
    "tiberius-dependencies",
    "tiberius-jobs",
    "tiberius-mail",
    "tiberius-models",
    "tiberius-server",
]
default-members = ["tiberius-server"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
debug = 0
split-debuginfo = "packed"

[profile.dev.package.sqlx-macros]
opt-level = 3
[profile.dev.package.tantivy]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.syn]
opt-level = 3
[profile.dev.package.maud]
opt-level = 3
[profile.dev.package.maud_macros]
opt-level = 3

[profile.dev]
debug = 1
split-debuginfo = "unpacked"