[package]
name = "tiberius-core"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[build-dependencies]
change-detection = "1.2.0"

[dependencies]
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
async-trait = "0.1.50"
base64 = "0.13"
bcrypt = "0.13.0"
chrono = "0.4.20"
# casbin = "2.0.7" # needs tobe 2.0.8 until sqlxmq is replaced or updated
csp = "1.1.0"
either = { version = "1.6.1", features = ["serde"] }
#envy = "0.4"
image = "0.24"
itertools = "0.10.4"
lazy_static = "1.4"
tracing = "0.1.29"
maud = { version = "*", features = ["axum"] }
new_mime_guess = "4.0"
rand = "0.8.3"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
ring = { version = "0.16.20", features = ["std"] }
securefmt = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "offline", "migrate", "uuid"] }
# sqlx-adapter = { version = "0.4.2", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.35"
tiberius-models = { path = "../tiberius-models" }
tiberius-dependencies = { path = "../tiberius-dependencies" }
tiberius-search = { path = "../tiberius-search" }
tokio = { version = "1.25", features = ["full"] }
url = { version = "2.3", features = ["serde"] }
uuid = "1"
erlang-term = "1.0.0"
anyhow = "1.0"
moka = { version = "0.9", features = ["future"] }
sentry = { version = "0.27.0", features = ["tracing", "anyhow", "tower", "panic", "contexts"] }
axum = "0.5"
axum-extra = { version = "^0.3", features = ["typed-routing", "cookie-lib", "cookie-signed", "cookie-private"] }
clap = { version = "4.0", features = ["derive", "env"] }

[dev-dependencies]
openssl = { version = "0.10.36", features = ["vendored", "v111"] }
