[package]
name = "tiberius-dependencies"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.2"
async-once-cell = "0.4"
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
async-trait = "0.1"
atomic = "0.5"
axum = { version = "0.5", features = ["http2", "headers", "multipart"] }
axum_csrf = "0.5"
axum_database_sessions = "4.0"
axum_sessions_auth = "7.0"
axum-extra = { version = "^0.3", features = ["typed-routing", "cookie-lib", "cookie-signed", "cookie-private", "async-read-body"] }
axum-flash = "0.5"
base32 = "0.4.0"
base64 = "0.21"
bcrypt = "0.14"
blake2 = "0.10"
casbin = "2.0"
chrono = { version = "0.4", default-features = false, features = [ "serde", "clock", "std" ] }
chrono-humanize = "0.2"
comrak = { git = "https://github.com/philomena-dev/comrak", rev = "6f1ef6a" }
cron = "0.12"
csp = "1.1"
either = { version = "1.6.1", features = ["serde"] }
flatiron = "1.0"
futures-util = "0.3.24"
gethostname = "0.4"
headers = "0.3"
hex = "0.4"
http = "^0.2"
http-serde = "1.1"
image = "0.24"
itertools = "0.10.4"
lazy_static = "1.4"
maud = { version = "*", features = ["axum"] }
mime = "0.3"
moka = { version = "0.10", features = ["future"] }
new_mime_guess = "4.0"
once_cell = "1.14"
rand = "0.8.3"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "socks", "cookies", "rustls-tls-native-roots", "tokio-rustls"] }
ring = { version = "0.16.20", features = ["std"] }
rust-embed = { version = "6.4", features = ["compression", "axum", "tokio"] }
securefmt = "0.1.1"
sentry = { version = "0.30", default-features = false, features = ["tracing", "anyhow", "tower", "panic", "contexts", "rustls", "reqwest", "profiling"] }
sentry-tower = { version = "0.30", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = { version = "0.12", features = ["axum"] }
serde_urlencoded = "0.7"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.6", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "offline", "migrate"] }
sqlx-adapter = { git = "https://github.com/cultpony/sqlx-adapter.git", features = ["postgres", "runtime-tokio-rustls"], default-features = false }
sqlxmq = { version = "0.4", default-features = false, features = ["runtime-tokio-rustls"] }
tempfile = "3"
textile = "0.2"
thiserror = "1.0.35"
tokio = { version = "1.26", features = ["full"] }
totp-rs = "4"
tower = "^0.4"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["std-future", "futures-03"] }
url = { version = "2.3", features = ["serde"] }
uuid = { version = "1", features = ["v6", "std", "rng"] }