[package]
name = "tiberius-jobs"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
async-trait = "0.1.50"
base64 = "0.13"
bcrypt = "0.13.0"
chrono = "0.4.20"
csp = "0.1.0"
either = { version = "1.6.1", features = ["serde"] }
image = "0.23"
itertools = "0.10.1"
lazy_static = "1.4"
maud = { version = "*", features = ["axum"] }
new_mime_guess = "3.0"
rand = "0.8.3"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
ring = { version = "0.16.20", features = ["std"] }
securefmt = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.2"
sqlx = { version = "0.6", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "offline", "migrate"] }
sqlxmq = { version = "0.4", default-features = false, features = ["runtime-tokio-rustls"] }
thiserror = "1.0.30"
tiberius-core = { path = "../tiberius-core" }
tiberius-models = { path = "../tiberius-models" }
tiberius-dependencies = { path = "../tiberius-dependencies" }
tokio = { version = "1.10", features = ["full"] }
tokio-cron-scheduler = "0.2.1"
tracing = "0.1.29"
url = { version = "2.2", features = ["serde"] }
uuid = "1"
sentry = { version = "0.27.0", features = ["tracing", "anyhow", "tower", "panic", "contexts"] }
futures-util = "0.3.24"

[features]
default = ["all-jobs"]
all-jobs = ["cleanup-jobs", "online-jobs", "reindex-jobs", "processing-jobs"]
stable-jobs = ["cleanup-jobs", "job_refresh_channels"]

cleanup-jobs = ["job_cleanup_sessions"]
online-jobs = ["job_refresh_channels"]
reindex-jobs = ["job_reindex_images", "job_reindex_tags"]
processing-jobs = ["job_process_image"]

job_cleanup_sessions = []
job_refresh_channels = []
job_process_image = ["job_reindex_images"]
job_reindex_images = []
job_reindex_tags = []
