[package]
name = "tiberius-jobs"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
async-trait = "0.1.50"
base64 = "0.13"
bcrypt = "0.14.0"
csp = "1.1.0"
either = { version = "1.6.1", features = ["serde"] }
image = "0.24"
itertools = "0.10.4"
lazy_static = "1.4"
maud = { version = "*", features = ["axum"] }
new_mime_guess = "4.0"
rand = "0.8.3"
regex = "1.5.4"
ring = { version = "0.16.20", features = ["std"] }
securefmt = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.2"
sqlx = { version = "0.6", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "offline", "migrate"] }
sqlxmq = { version = "0.4", default-features = false, features = ["runtime-tokio-rustls"] }
thiserror = "1.0.35"
tiberius-core = { path = "../tiberius-core" }
tiberius-models = { path = "../tiberius-models" }
tiberius-dependencies = { path = "../tiberius-dependencies" }
tiberius-search = { path = "../tiberius-search" }
tokio = { version = "1.21", features = ["full"] }
url = { version = "2.3", features = ["serde"] }
futures-util = "0.3.24"

[features]
default = ["job_process_image"]
job_process_image = []
