[package]
name = "tiberius-jobs"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius-core = { path = "../tiberius-core" }
tiberius-models = { path = "../tiberius-models" }
tiberius-dependencies = { path = "../tiberius-dependencies" }
tiberius-search = { path = "../tiberius-search" }
# cannot externalize due to lacking macro hygiene
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.32", features = ["full"] }

[features]
default = ["job_process_image"]
job_process_image = []
