[package]
name = "tiberius-models"
version = "0.1.0"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = [ "attributes" ] }
async-trait = "0.1.50"
base64 = "0.13"
chrono = { version = "0.4.19", features = [ "serde" ] }
futures = "0.3.5"
hex = "0.4.3"
ipnetwork = "0.17" # sqlx dep
itertools = "0.10.0"
tracing = "0.1.26"
progressing = "3.0.2"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "ipnetwork", "offline"] }
tantivy = "0.16"
thiserror = "1.0.24"
tiberius-search = { path = "../tiberius-search" }
tokio = { version = "1.10" }
url = { version = "2.2", features = ["serde"] }
