[package]
name = "tiberius-models"
version = "0.1.0"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = [ "attributes" ] }
async-trait = "0.1.50"
base32 = "0.4.0"
base64 = "0.13"
bcrypt = "0.10.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
futures = "0.3.5"
hex = "0.4.3"
ipnetwork = "0.17" # sqlx dep
itertools = "0.10.0"
either = "1.6.1"
tracing = "0.1.29"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.10", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "ipnetwork", "offline", "uuid"] }
tantivy = "0.16"
thiserror = "1.0.30"
tiberius-search = { path = "../tiberius-search" }
tokio = { version = "1.10" }
url = { version = "2.2", features = ["serde"] }
ring = { version = "0.16.20", features = ["std"] }
totp-rs = "0.6.4"
anyhow = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "uuid", "json", "msgpack", "tls"] }
tiberius-common-html = { path = "../tiberius-common-html" }
maud = { git = "https://github.com/mbr/maud", branch = "mbr/rocket-0.5", features = ["rocket"] }

[dev-dependencies]
sqlx-database-tester = { version = "0.3.0", features = ["runtime-tokio"] }

[features]
verify-db = []