[package]
name = "tiberius-models"
version = "0.1.0"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2021"
license = "LicenseRef-Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-extra = { version = "^0.7", features = ["typed-routing", "cookie-signed", "cookie-private"] }
axum = "0.6"
async-std = { version = "1.6", features = [ "attributes" ] }
async-trait = "0.1.71"
bcrypt = "0.14.0"
futures = "0.3.27"
ipnetwork = { version = "0.19", features = [ "serde" ] } # Not used but we force the serde feature on
itertools = "0.11.0"
either = "1.6.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "ipnetwork", "offline", "uuid"] }
tantivy = "0.19"
thiserror = "1.0.39"
tiberius-search = { path = "../tiberius-search" }
tiberius-dependencies = { path = "../tiberius-dependencies" }
tokio = { version = "1.29" }
url = { version = "2.4", features = ["serde"] }
ring = { version = "0.16.20", features = ["std"] }
anyhow = "1.0"
tiberius-common-html = { path = "../tiberius-common-html" }
maud = { version = "*", features = ["axum"] }

[dev-dependencies]
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
