[package]
name = "tiberius-search"
version = "0.1.0"
authors = ["cultpony <67918945+cultpony@users.noreply.github.com>"]
edition = "2021"
license = "Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = [ "attributes" ] }
chrono = { version = "0.4", default-features = false, features = [ "std" ] }
strsim = "0.10"
thiserror = "1.0"
lazy-regex = "2.2"
tantivy = { version = "0.19", optional = true }
either = "1.6"
async-trait = "0.1"
tracing = "0.1"
htp = "0.4"
chrono-english = "0.1"

[features]
default = ["search-with-tantivy"]
search-with-tantivy = ["tantivy"]

[dev-dependencies]
criterion = "0.3"
anyhow = "*"

[[bench]]
name = "benchmark_pass5_folding"
harness = false