[package]
name = "tiberius-server"
version = "0.1.0"
authors = ["Cult Pony"]
edition = "2021"
license = "AGPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
async-trait = "0.1.50"
base64 = "0.13"
bcrypt = "0.10.0"
better-panic = "0.2"
camo-url = "0.1.2"
casbin = "2.0.7" # needs tobe 2.0.8 until sqlxmq is replaced or updated
chrono = "0.4.19"
chrono-humanize = "0.2.1"
clap = { version = "3.0", features = ["derive"] }
csp = "0.1.0"
either = { version = "1.6.1", features = ["serde"] }
envy = "0.4"
flexi_logger = { version = "0.19", features = ["trc"] }
hex = "0.4.3"
human_bytes = "0.3.0"
image = "0.23.14"
itertools = "0.10.1"
kankyo = "0.3"
lazy_static = "1.4"
maud = { git = "https://github.com/mbr/maud", branch = "mbr/rocket-0.5", features = ["rocket"] }
new_mime_guess = "3.0"
rand = "0.8.3"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
ring = { version = "0.16.20", features = ["std"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets", "uuid", "json", "msgpack", "tls"] }
rust-embed = { version = "6.1", features = ["compression"] }
securefmt = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9.5"
sha3 = "0.10.0"
sqlx = { version = "0.5.10", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "offline", "migrate"] }
sqlxmq = { git = "https://github.com/cultpony/sqlxmq.git", default-features = false, features = ["runtime-tokio-rustls"] }
sqlx-adapter = { version = "0.4.2", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.30"
tiberius-core = { path = "../tiberius-core" }
tiberius-common-html = { path = "../tiberius-common-html" }
tiberius-jobs = { path = "../tiberius-jobs", default-features = false }
tiberius-models = { path = "../tiberius-models" }
tokio = { version = "1.10", features = ["full", "tracing"] }
tokio-cron-scheduler = "0.2.1"
tracing = { version = "0.1", features = [] }
tracing-log = { version = "0.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#uri-builder = "0.1.0"
url = { version = "2.2", features = ["serde"] }
#url_serde = "0.2"
uuid = "0.8.1"
textile = "0.2.1"
pulldown-cmark = "0.8.0"
ammonia = "3.1.2"
anyhow = "1.0"
console-subscriber = "0.1"

[dev-dependencies]
sqlx-database-tester = { version = "0.2.0", features = ["runtime-tokio"] }

[features]
default = ["full-release"]
channel-images = []
# Enables all routes and features, even experimental ones
full-release = ["channel-images", "tiberius-jobs/all-jobs", "process-images", "session-handover-philomena", "tokio-console"]
# Enables only routes and features that are ready to deploy
stable-release = ["tiberius-jobs/stable-jobs", "session-handover-philomena", "tokio-console"]
dev-release = ["full-release", "verify-db"]
process-images = ["tiberius-jobs/processing-jobs"]
session-handover-philomena = []
verify-db = ["tiberius-models/verify-db"]
tokio-console = []
# If enabled, all users can send PMs to eachother
# This option also enables various UI to facilitate communication
everyone-can-pm = []