[package]
name = "tiberius-server"
version = "0.1.0"
authors = ["Cult Pony"]
edition = "2021"
license = "LicenseRef-Proprietary"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
async-trait = "0.1.66"
bcrypt = "0.14"
better-panic = "0.3"
camo-url = "0.1.2"
chrono-humanize = "0.2.1"
clap = { version = "4.2", features = ["derive", "env"] }
csp = "1.1.0"
either = { version = "1.6.1", features = ["serde"] }
human_bytes = "0.4.1"
itertools = "0.10.4"
kankyo = "0.3"
lazy_static = "1.4"
maud = { version = "*", features = ["axum"] }
new_mime_guess = "4.0"
rand = "0.8.3"
regex = "1.8.1"
ring = { version = "0.16.20", features = ["std"] }
securefmt = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.2"
sha3 = "0.10.7"
sqlx = { version = "0.6", features = ["postgres", "chrono", "time", "macros", "json", "runtime-tokio-rustls", "offline", "migrate"] }
sqlxmq = { version = "0.4", default-features = false, features = ["runtime-tokio-rustls"] }
thiserror = "1.0.39"
tiberius-core = { path = "../tiberius-core" }
tiberius-common-html = { path = "../tiberius-common-html" }
tiberius-jobs = { path = "../tiberius-jobs" }
tiberius-models = { path = "../tiberius-models" }
tiberius-dependencies = { path = "../tiberius-dependencies" }
tokio = { version = "1.27", features = ["full", "tracing"] }
tokio-cron-scheduler = "0.9"
tracing = { version = "0.1", features = [] }
tracing-log = { version = "0.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.3", features = ["serde"] }
uuid = "1"
# textile = "0.2.1"
pulldown-cmark = "0.9.2"
ammonia = "3.1.2"
anyhow = "1.0"
axum = { version = "0.6", features = ["multipart"] }
axum-extra = { version = "^0.7", features = ["typed-routing", "cookie-signed", "cookie-private", "async-read-body"] }
tempfile = "3"
serde_qs = { version = "0.12.0", features = ["axum"] }
tower-cookies = "0.9.0"
maplit = "1.0.2"

[dev-dependencies]
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }

[features]
default = ["full-release"]
channel-images = []
# Enables all routes and features, even experimental ones
full-release = ["channel-images", "session-handover-philomena"]
# Enables only routes and features that are ready to deploy
stable-release = ["session-handover-philomena"]
process-images = []
session-handover-philomena = []
# If enabled, all users can send PMs to eachother
# This option also enables various UI to facilitate communication
everyone-can-pm = []
